--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,28 +15,31 @@
         android:layout_weight="1">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_gravity="center"
-            android:gravity="center"
             android:id="@+id/tvWelcome"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/welcome_message"/>
+            android:layout_gravity="center"
+            android:layout_margin="30dp"
+            android:gravity="center"
+            android:text="@string/welcome_message"
+            android:textColor="#ed4700"
+            android:textSize="26sp" />
 
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvNotifications"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:id="@+id/rvNotifications"/>
+            android:visibility="gone" />
 
         <Button
+            android:id="@+id/bRelease"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center"
-            android:id="@+id/bRelease"
+            android:layout_marginBottom="20dp"
             android:text="Release Notifications" />
 
     </FrameLayout>
-
 
 
     <android.support.design.widget.BottomNavigationView
