--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,16 @@
             android:layout_marginBottom="20dp"
             android:text="Release Notifications" />
 
+        <Switch
+            android:id="@+id/switch1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            android:textSize="20sp"
+            android:text="Activate Smart Notifications" />
+
+
     </FrameLayout>
 
 
