--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,16 +14,23 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="50dp"
+            android:src="@mipmap/ic_launcher"/>
+
         <TextView
             android:id="@+id/tvWelcome"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="30dp"
             android:gravity="center"
             android:text="@string/welcome_message"
             android:textColor="#ed4700"
-            android:textSize="26sp" />
+            android:textSize="22sp" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvNotifications"
